--- a/module1.html
+++ b/module1.html
@@ -63,7 +63,8 @@
 							<p>Summary</p>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>2.ARTEFACTS</p>
-							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/de16e6ae7da533b543ccb6349dcd98eb81758cdc/REFERENCE/Assignment-Unit-1-Submission.pdf"> Collaborative Learning Discussion - Initial Post></a></li></p>
+							<p>2.1 Collaborative Learning Discussion 1</p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/de16e6ae7da533b543ccb6349dcd98eb81758cdc/REFERENCE/Assignment-Unit-1-Submission.pdf"> Collaborative Learning Discussion - Initial Post</a></li></p>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>3.REFLECTIVE</p>
 							<p>Reflective</p>
