--- a/module2.html
+++ b/module2.html
@@ -61,6 +61,8 @@
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>1.SUMMARY</p>
 							<p>Summary</p>
+							<p>2.1 Collaborative Learning Discussion 2</p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/b3e8294aa49824a6e36cbd4b5ec3fee4317a836a/REFERENCE/Discussion-2.docx"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>2.ARTEFACTS</p>
 							<p>Artefacts</p>
