--- a/module2.html
+++ b/module2.html
@@ -55,7 +55,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>MODULE 2
-							<p>NETWORK AND INFORMATION SECURITY MANAGEMENT</p>
+							<p>NETWORK SECURITY </p>
 
 </h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
