--- a/module2.html
+++ b/module2.html
@@ -60,7 +60,19 @@
 </h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>1.SUMMARY</p>
-							<p>1.1 Collaborative Learning Discussion 2</p>
+							<p>1.1 Collaborative Learning Discussion 1 - Initial Post </p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p>1.2 Collaborative Learning Discussion 1 - Peer Posts </p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p>1.3 Collaborative Learning Discussion 2 - Initial Post</p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p>1.4 Collaborative Learning Discussion 2 - Peer Posts</p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p>1.5 Vulnerability Audit and Assessment - Baseline Analysis and Plan</p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p>1.6 Scanning Activity </p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p>1.7 Collaborative Learning Discussion 2</p>
 							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>2.ARTEFACTS</p>
