--- a/module2.html
+++ b/module2.html
@@ -61,19 +61,19 @@
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>1.SUMMARY</p>
 							<p>1.1 Collaborative Learning Discussion 1 - Initial Post </p>
-							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/e13bb8fa00fb2ffbbbb407f49c36a4f34465a378/REFERENCE/Discussion-1_Initial-Post.pdf"> Collaborative Learning Discussion 1 - Initial Post</a></li></p>
 							<p>1.2 Collaborative Learning Discussion 1 - Peer Posts </p>
-							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/e13bb8fa00fb2ffbbbb407f49c36a4f34465a378/REFERENCE/Discussion-1_Peer-Posts.pdf"> Collaborative Learning Discussion 1 - Peer Posts</a></li></p>
 							<p>1.3 Collaborative Learning Discussion 2 - Initial Post</p>
-							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/e13bb8fa00fb2ffbbbb407f49c36a4f34465a378/REFERENCE/Discussion-2_Initial-Post.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
 							<p>1.4 Collaborative Learning Discussion 2 - Peer Posts</p>
-							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/e13bb8fa00fb2ffbbbb407f49c36a4f34465a378/REFERENCE/Discussion-2_Peer-Posts.pdf"> Collaborative Learning Discussion 2 - Peer Posts</a></li></p>
 							<p>1.5 Vulnerability Audit and Assessment - Baseline Analysis and Plan</p>
-							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/e13bb8fa00fb2ffbbbb407f49c36a4f34465a378/REFERENCE/Unit-3_%20Vulnerability%20Audit%20and%20Assessment%20-%20Baseline%20Analysis%20and%20Plan.pdf"> Vulnerability Audit and Assessment - Baseline Analysis and Plan</a></li></p>
 							<p>1.6 Scanning Activity </p>
-							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
-							<p>1.7 Collaborative Learning Discussion 2</p>
-							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/306cd3128867dc7fd9f0dafc51712757c6a21525/REFERENCE/Discussion-2.pdf"> Collaborative Learning Discussion 2 - Initial Post</a></li></p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/e13bb8fa00fb2ffbbbb407f49c36a4f34465a378/REFERENCE/Scanning%20Activity.pdf"> Scanning Activity</a></li></p>
+							<p>1.7 Vulnerability Audit and Assessment - Results and Executive Summary</p>
+							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/eb7102043d99238333b24484f4fd8b60029c22e1/REFERENCE/Unit-6_Vulnerability%20Audit%20and%20Assessment%20-%20Results%20and%20Executive%20Summary.pdf"> Vulnerability Audit and Assessment - Results and Executive Summary</a></li></p>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>2.ARTEFACTS</p>
 							<p>Artefacts</p>
