--- a/module2.html
+++ b/module2.html
@@ -58,7 +58,7 @@
 							<p>NETWORK SECURITY </p>
 
 </h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
+							<!--<span class="image main"><img src="images/pic13.jpg" alt="" /></span> -->
 							<p>1.SUMMARY</p>
 							<p>1.1 Collaborative Learning Discussion 1 - Initial Post </p>
 							<p><li><a href="https://github.com/pahuja83/E-Portfolio/blob/e13bb8fa00fb2ffbbbb407f49c36a4f34465a378/REFERENCE/Discussion-1_Initial-Post.pdf"> Collaborative Learning Discussion 1 - Initial Post</a></li></p>
