--- a/module3.html
+++ b/module3.html
@@ -55,7 +55,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>MODULE 3
-							<p>INFORMATION RISK MANAGEMENT</p>
+							<p>SECURITY & RISK MANAGEMENT</p>
 
 </h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
