--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<a href="module3.html">
 										<h2>MODULE 3</h2>
 										<div class="content">
-											<p>INFORMATION RISK MANAGEMENT</p>
+											<p>SECURITY & RISK MANAGEMENT</p>
 										</div>
 									</a>
 								</article>
