--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<a href="module2.html">
 										<h2>MODULE 2</h2>
 										<div class="content">
-											<p>NETWORK AND INFORMATION SECURITY MANAGEMENT
+											<p>NETWORK SECURITY
 
 </p>
 										</div>
