--- a/module3.html
+++ b/module3.html
@@ -195,9 +195,7 @@
 
 							<p><b>: TEAM-MEETINGS</b></n>
 							
-							<p style="margin:50px"><b>Knowledge:</b><br>
-							<p>TEAM_MEETING_1 </p>
-							<p><li><a href="/Discussion-2.pdf"> TEAM_MEETING_1</a></li></p>
+							<p style="margin:50px"><li><a href="/Discussion-2.pdf"> TEAM_MEETING_1</a></li></p>
 			
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>2.ARTEFACTS</p>
