--- a/module3.html
+++ b/module3.html
@@ -193,9 +193,9 @@
 							2. Explain their potential impact on research <br>
 							3. Recommend which you think will be most influential <br></p>
 
-							<p><b>: TEAM-MEETINGS</b></n>
+							<p><b>TEAM-MEETINGS</b></n>
 							
-							<p style="margin:50px"><li><a href="/Discussion-2.pdf"> TEAM_MEETING_1</a></li></p>
+							<p style="margin:100px"><li><a href="Discussion-2.pdf"> TEAM_MEETING_1</a></li></p>
 			
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>2.ARTEFACTS</p>
