--- a/module3.html
+++ b/module3.html
@@ -194,10 +194,10 @@
 							3. Recommend which you think will be most influential <br></p>
 
 							<p><b>TEAM-MEETINGS</b><br></p>
-							<p style="margin:100px"><a href="Module_3_Meeting_1.pdf">1: TEAM_MEETING_1</a></p>
-							<p style="margin:100px"><li><a href="Module_3_Meeting_2.pdf">2: TEAM_MEETING_2</a></li></p>
-							<p style="margin:100px"><li><a href="Module_3_Meeting_3.pdf">3: TEAM_MEETING_3</a></li></p>
-							<p style="margin:100px"><li><a href="Module_3_Meeting_4.pdf">4: TEAM_MEETING_4</a></li></p>
+							<p style="margin:100px"><li style="margin-left:50px;padding:50px"><a href="Module_3_Meeting_1.pdf">1: Team_Meeting_1</a></li></p>
+							<p style="margin:100px"><li style="padding:50px"><a href="Module_3_Meeting_2.pdf">2: Team_Meeting_2</a></li></p>
+							<p style="margin:100px"><li style="padding:50px"><a href="Module_3_Meeting_3.pdf">3: Team_Meeting_3</a></li></p>
+							<p style="margin:100px"><li style="padding:50px"><a href="Module_3_Meeting_4.pdf">4: Team_Meeting_4</a></li></p>
 
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p>2.ARTEFACTS</p>
