--- a/module8.html
+++ b/module8.html
@@ -59,20 +59,22 @@
 
 </h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>1.SUMMARY</p>
-							<p>Summary</p>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>2.ARTEFACTS</p>
-							<p>Artefacts</p>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>3.REFLECTIVE</p>
-							<p>Reflective</p>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>4.MEETING NOTES</p>
-							<p>Meeting Notes</p>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>5.SKILLS LEARNT & USAGE</p>
-							<p>Skills Learnt & Usage</p>
+							<p style="margin:20px"><b>Learning Outcomes:</n><br></b>
+							<p style="margin:50px"><b>Unit-1: Introduction to Secure Software Development</b></br>
+							1. Identify relevant academic literature which discusses the ways in which secure software may be developed using an agile process.<br>
+							2. Decompose an activity into a set of tasks which can be represented using a flow chart from the UML portfolio of modelling techniques.<br>
+							3. Describe the importance of creating a culture of risk awareness in an organisation, in addition to the creation of secure software.</p>
+							
+								<p style="margin:50px"><b>Unit-2: Research Questions, the Literature Review and the Research Proposal</b><br>
+							1. Examine the characteristics that make up a suitable research topic.<br>
+							2. Explore rational and creative methods for formulating a research idea.<br>
+							3. Identify means of transforming research ideas into crafted research questions and proposal.<br>
+							4. Conduct a literature search, critique the literature and to present a literature review.</p>
+							
+							<p style="margin:50px"><b>Collaborative Learning Discussions</b></br>
+							<p><li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Collaboration Discussion-1-Initial Post.pdf">Collaboration Discussion-1:Initial Post</a></li>
+							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Collaboration Discussion-1-Peer Reviews.pdf">Collaboration Discussion-1-Peer Reviews</a></li>
+							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Collaboration Discussion-1-Summary Post.pdf">Collaboration Discussion-1-Summary Post</a></li></p>
 						</div>
 					</div>
 
