--- a/module8.html
+++ b/module8.html
@@ -60,10 +60,9 @@
 </h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
 							<p style="margin:20px"><b>Learning Outcomes:</n><br></b>
-							<p style="margin:50px"><b>Unit-1: Introduction to Secure Software Development</b></br>
-							1. Identify relevant academic literature which discusses the ways in which secure software may be developed using an agile process.<br>
-							2. Decompose an activity into a set of tasks which can be represented using a flow chart from the UML portfolio of modelling techniques.<br>
-							3. Describe the importance of creating a culture of risk awareness in an organisation, in addition to the creation of secure software.</p>
+							<p style="margin:50px"><b>Unit-1: Scientific Investigation and Ethics</b></br>
+							1. Differentiate between inductive and deductive reasoning.<br>
+							2. Understand why ethics are important and how they may relate to your area of research and your professional practice.<br></p>
 							
 								<p style="margin:50px"><b>Unit-2: Research Questions, the Literature Review and the Research Proposal</b><br>
 							1. Examine the characteristics that make up a suitable research topic.<br>
