--- a/module8.html
+++ b/module8.html
@@ -107,20 +107,20 @@
 							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Unit8-Research Proposal Outline.pdf">Research Proposal Outline</a></li>
 							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module8-Unit-8-CollaborationDiscussion-2-Peer Reviews.pdf">CollaborationDiscussion-2-Peer Reviews</a></li>
 							<p style="margin:50px"><b>Unit8_Excercises</b></br>
-							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.1B.pdf">Exe-8.1B</a></li>
-							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.2B.pdf">Exe-8.2B</a></li>
-							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.3D.pdf">Exe-8.3D</a></li>
-							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.4G.pdf">Exe-8.4G</a></li>
-							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.6C.pdf">Exe-8.6C</a></li>
+							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.1B.pdf">Exe-8.1B</a></li>
+							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.2B.pdf">Exe-8.2B</a></li>
+							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.3D.pdf">Exe-8.3D</a></li>
+							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.4G.pdf">Exe-8.4G</a></li>
+							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.6C.pdf">Exe-8.6C</a></li>
 
 								<p style="margin:50px"><b>Unit-9: Analysing Qualitative Data</b><br>
 							1. Different types of analysis and how they may be useful for the data collected.<br>
 							2. Different charts available to present the different types of data obtained.<br></p>
 							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module8-Unit-9-CollaborationDiscussion-2-Summary Post.pdf">Unit-9-CollaborationDiscussion-2-Summary Post</a></li></p>
 							<p style="margin:50px"><b>Unit9_Excercises</b></br>
-							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-9.1D.pdf">Exe-9.1D</a></li>
-							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-9.2E.pdf">Exe-9.2E</a></li>		
-							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-9.3B.pdf">Exe-9.3B</a></li></p>	
+							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-9.1D.pdf">Exe-9.1D</a></li>
+							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-9.2E.pdf">Exe-9.2E</a></li>		
+							<li style="padding-left:90px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-9.3B.pdf">Exe-9.3B</a></li></p>	
 							
 								<p style="margin:50px"><b>Unit-10: Research Writing</b><br>
 							1. Research reporting/writing.<br>
@@ -150,14 +150,14 @@
 							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module8-Unit-9-CollaborationDiscussion-2-Summary Post.pdf">Collaboration Discussion-2-Summary Post</a></li></p>
 							
 							<p style="margin:50px"><b>Unit 8 & 9 Excercises</b></br>
-							<p><li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.1B.pdf">Exe-8.1B</a></li>
-							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.2B.pdf">Exe-8.2B</a></li>
-							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.3D.pdf">Exe-8.3D</a></li>
-							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.4G.pdf">Exe-8.4G</a></li>
-							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-8.6C.pdf">Exe-8.6C</a></li>
-							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-9.1D.pdf">Exe-9.1D</a></li>
-							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-9.2E.pdf">Exe-9.2E</a></li>		
-							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="amit-Exe-9.3B.pdf">Exe-9.3B</a></li></p>							
+							<p><li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.1B.pdf">Exe-8.1B</a></li>
+							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.2B.pdf">Exe-8.2B</a></li>
+							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.3D.pdf">Exe-8.3D</a></li>
+							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.4G.pdf">Exe-8.4G</a></li>
+							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-8.6C.pdf">Exe-8.6C</a></li>
+							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-9.1D.pdf">Exe-9.1D</a></li>
+							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-9.2E.pdf">Exe-9.2E</a></li>		
+							<li style="padding-left:50px; padding-bottom:5px"><a style="color:blue"  href="Module 8-Exe-9.3B.pdf">Exe-9.3B</a></li></p>							
 						</div>
 					</div>
 
